--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
         </li>
       </ul>
 
-      <ul id="nav-mobile" class="sidenav">
-        <li>
+      <ul class="collection" id="nav-mobile" class="sidenav">
+        <li class="collection-item">
           <a href="#">About Us</a>
         </li>
-        <li>
+        <li class="collection-item">
           <a href="#">itservice</a>
         </li>
-        <li>
+        <li class="collection-item">
           <a href="#">API</a>
         </li>
-        <li>
+        <li class="collection-item">
           <a href="#">Project</a>
         </li>
       </ul>
@@ -90,7 +90,7 @@
             <h2 class="center teal-text darken-4">
               <i class="material-icons">group</i>
             </h2>
-            <h5 class="center">A propos de nous</h5>
+            <h5 class="center">A Propos </h5>
 
             <p class="light">Nous sommes un groupe d’IT spécialisé dans le domaine de la nouvelle technologie pour le changement de l'afrique.
               Nous travaillons dur afin d'ameliorer et optimiser la communication sur le continent africain dans le but d'être
@@ -103,7 +103,7 @@
             <h2 class="center teal-text darken-4">
               <i class="material-icons">group</i>
             </h2>
-            <h5 class="center">about us</h5>
+            <h5 class="center">About Us</h5>
 
             <p class="light">
               We are an IT group specialized in the field of new technology for the change of Africa. We are working hard to improve and
@@ -117,7 +117,7 @@
             <h2 class="center teal-text darken-4">
               <i class="material-icons">group</i>
             </h2>
-            <h5 class="center">Kuhusu sisi</h5>
+            <h5 class="center">Kuhusu Sisi</h5>
             <p class="light">
               Sisi ni kundi la IT maalumu katika uwanja wa teknolojia mpya kwa mabadiliko ya Afrika. Tunafanya kazi kwa bidii ili kuboresha
               na kuboresha mawasiliano kwenye bara la Afrika ili kujitegemea na Wafadhili.</p>
@@ -129,7 +129,7 @@
             <h2 class="center teal-text darken-4">
               <i class="material-icons">group</i>
             </h2>
-            <h5 class="center">Kuhusu sisi</h5>
+            <h5 class="center">Na Tina Na Biso</h5>
             <p class="light">
               Siyiqela elithile le-IT kwiinkalo zeteknoloji entsha yokutshintsha kweAfrika. Sisebenza kanzima ukuphucula nokuphuculwa kolonxibelelwano
               kwilizwekazi laseAfrika ukwenzela ukuba zizimelele kwabeNtshona.</p>
@@ -147,7 +147,7 @@
         <div class="row center">
           <h5 class="header col s12 light">Faire De l'Afrique Un Meilleur Endroit</h5>
           <h5 class="header col s12 light">Make Africa A Better Place</h5>
-          <h5 class="header col s12 light">Kokomisa Afrique esika moko ya kitoko</h5>
+          <h5 class="header col s12 light">Kokomisa Afrique Esika Moko Ya Kitoko</h5>
 
           <h5 class="header col s12 light">Fanya Afrika Mahali Bora</h5>
 
