--- a/indexenglish.html
+++ b/indexenglish.html
@@ -129,7 +129,7 @@
             <h2 class="center teal-text darken-4">
               <i class="material-icons">group</i>
             </h2>
-            <h5 class="center">Kuhusu sisi</h5>
+            <h5 class="center">Na Tina Na Biso</h5>
             <p class="light">
               Siyiqela elithile le-IT kwiinkalo zeteknoloji entsha yokutshintsha kweAfrika. Sisebenza kanzima ukuphucula nokuphuculwa kolonxibelelwano
               kwilizwekazi laseAfrika ukwenzela ukuba zizimelele kwabeNtshona.</p>
@@ -147,7 +147,7 @@
         <div class="row center">
           <h5 class="header col s12 light">Faire De l'Afrique Un Meilleur Endroit</h5>
           <h5 class="header col s12 light">Make Africa A Better Place</h5>
-          <h5 class="header col s12 light">Kokomisa Afrique esika moko ya kitoko</h5>
+          <h5 class="header col s12 light">Kokomisa Afrique esika Moko Ya kitoko</h5>
 
           <h5 class="header col s12 light">Fanya Afrika Mahali Bora</h5>
 
