--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </li>
       </ul>
 
-      <ul class="collection" id="nav-mobile" class="sidenav">
+      <ul  id="nav-mobile" class="sidenav">
         <li class="collection-item">
           <a href="#">About Us</a>
         </li>
