--- a/index.html
+++ b/index.html
@@ -22,23 +22,25 @@
         </li>
       </ul>
 
-      <ul  id="nav-mobile" class="sidenav">
-        <li class="collection-item">
+      <div id="nav-mobile" class="sidenav">
+        <ul class="collection">
+        <li>
           <a href="#">About Us</a>
         </li>
-        <li class="collection-item">
+        <li>
           <a href="#">itservice</a>
         </li>
-        <li class="collection-item">
+        <li>
           <a href="#">API</a>
         </li>
-        <li class="collection-item">
+        <li>
           <a href="#">Project</a>
         </li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger">
         <i class="material-icons">menu</i>
       </a>
+    </div>
     </div>
   </nav>
 
