--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         </li>
       </ul>
 
-      <div id="nav-mobile" class="sidenav">
-        <ul class="collection">
+      <ul id="nav-mobile" class="sidenav">
         <li>
           <a href="#">About Us</a>
         </li>
@@ -41,7 +40,6 @@
         <i class="material-icons">menu</i>
       </a>
     </div>
-    </div>
   </nav>
 
   <div id="index-banner" class="parallax-container">
@@ -53,7 +51,6 @@
         <div class="row center">
           <h3 class="header col s12 white-text">Travail Fait Avec Modestie</h3>
           <!-- <h5 class="header col s12 white-text">Work done with modesty</h5> -->
-        </div>
 
         <div class="row center ">
           <div class="col s12 ">
@@ -73,12 +70,12 @@
       <img src="img/test.gif" alt="Unsplashed background img 1">
     </div>
   </div>
-  <div class="container ">
+  <!-- <div class="container ">
     <div class="section">
 
 
     </div>
-  </div>
+  </div> -->
 
 
 
