--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <div class="row center">
           <h3 class="header col s12 white-text">Travail Fait Avec Modestie</h3>
           <!-- <h5 class="header col s12 white-text">Work done with modesty</h5> -->
+        
 
         <div class="row center ">
           <div class="col s12 ">
@@ -63,7 +64,7 @@
             <a href="#" class="btn btn-large  teal darken-3" target="_self" id="LingalaId">Lingala</a>
           </div>
         </div>
-
+      </div>
       </div>
     </div>
     <div class="parallax">
