--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@
         <!-- <br>
         <br> -->
         <h1 class="header center white-text text-lighten-2">Modestine Web Services</h1>
+        <h4 class="header  center white-text">Travail Fait Avec Modestie</h4>
         <div class="row center">
-          <h3 class="header col s12 white-text">Travail Fait Avec Modestie</h3>
-          <!-- <h5 class="header col s12 white-text">Work done with modesty</h5> -->
         
+          <!-- <h5 class="header col s12 white-text">Work done with modesty</h5> -->
+          <br><br>
             <!-- <h4>Choose Your Language</h4> -->
-            <h5>Choisissez Votre Langue De Préference</h5>
+            <h6>Choisissez Votre Langue De Préference</h6>
             <!-- <p class=" light">Check out the documentation for the Web Services.</p> -->
             <a href="index.html" class="btn btn-large  teal darken-3" target="_self">French</a>
             <a href="indexenglish.html" class="btn btn-large  teal darken-3" target="_self">English</a>
