--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
-  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, viewport-fit=cover">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Modestine</title>
 
   <!-- CSS  -->
@@ -16,7 +15,7 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Modestine_logo</a>
+      <a id="logo-container" href="#" class="brand-logo">Mo</a>
       <ul class="right hide-on-med-and-down">
         <li>
           <a href="#" class="btn btn-small cyan darken-3" id="ConnecterId">Se Connecter</a><a href="#" class="btn btn-small cyan darken-3" id="EnregistrerId">S'enregister</a>
