--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo">Mo</a>
-      <ul class="right">
+      <ul class="right hide-on-med-and-down">
         <li>
           <a href="#" class="btn btn-small cyan darken-3" id="ConnecterId">Se Connecter</a><a href="#" class="btn btn-small cyan darken-3" id="EnregistrerId">S'enregister</a>
         </li>
