--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Mo</a>
+      <a id="logo-container" href="#" class="brand-logo">Logo Modestine</a>
       <ul class="right hide-on-med-and-down">
         <li>
           <a href="#" class="btn btn-small cyan darken-3" id="ConnecterId">Se Connecter</a><a href="#" class="btn btn-small cyan darken-3" id="EnregistrerId">S'enregister</a>
@@ -44,17 +44,13 @@
   </nav>
 
   <div id="index-banner" class="parallax-container">
-    <div class="section no-pad-bot">
+    <!-- <div class="section no-pad-bot"> -->
       <div class="container">
         <!-- <br>
         <br> -->
         <h1 class="header center white-text text-lighten-2">Modestine Web Services</h1>
         <h4 class="header  center white-text">Travail Fait Avec Modestie</h4>
         <div class="row center">
-        
-          <!-- <h5 class="header col s12 white-text">Work done with modesty</h5> -->
-          <br><br>
-            <!-- <h4>Choose Your Language</h4> -->
             <h6>Choisissez Votre Langue De Préference</h6>
             <!-- <p class=" light">Check out the documentation for the Web Services.</p> -->
             <a href="index.html" class="btn btn-large  teal darken-3" target="_self">French</a>
@@ -63,7 +59,7 @@
             <a href="#" class="btn btn-large  teal darken-3" target="_self" id="LingalaId">Lingala</a>
        
       </div>
-      </div>
+      <!-- </div> -->
     </div>
     <div class="parallax">
       <img src="img/test.gif" alt="Unsplashed background img 1">
