--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Logo Modestine</a>
+      <a id="logo-container" href="#" class="brand-logo">Logo_Modestine</a>
       <ul class="right hide-on-med-and-down">
         <li>
           <a href="#" class="btn btn-small cyan darken-3" id="ConnecterId">Se Connecter</a><a href="#" class="btn btn-small cyan darken-3" id="EnregistrerId">S'enregister</a>
